--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "private": true,
   "keywords": [],
@@ -13,8 +13,13 @@
   "description": "",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "inquirer": "^12.10.0",
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
     "ora": "^9.0.0"
   }
 }
