--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "inquirer": "^12.10.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "ora": "^9.0.0"
+    "ora": "^9.0.0",
+    "sharp": "^0.34.5"
   }
 }
