--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,14 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "inquirer": "^12.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.20.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10",
     "ora": "^9.0.0",
     "sharp": "^0.34.5"
