--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10",
     "ora": "^9.0.0",
+    "razorpay": "^2.9.6",
     "sharp": "^0.34.5"
   }
 }
