--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "archiver": "^7.0.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -25,6 +26,7 @@
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10",
     "ora": "^9.0.0",
+    "p-limit": "^7.2.0",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.5"
   }
